test/conformance/chainsaw/validate/policy/standard/psa/test-exclusion-host-namespaces/bad-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bad-pod
  namespace: default
spec:
  hostPID: true
  containers:
  - name: nginx1
    image: nginx
    args:
    - sleep
    - 1d
