test/conformance/chainsaw/validate/policy/standard/psa/test-exclusion-host-namespaces/excluded-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: excluded-pod
  namespace: default
spec:
  hostNetwork: true
  containers:
  - name: nginx1
    image: nginx
    args:
    - sleep
    - 1d
