test/conformance/chainsaw/validate/policy/standard/psa/test-exclusion-host-namespaces/good-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: good-pod
  namespace: default
spec:
  hostNetwork: false
  containers:
  - name: nginx1
    image: nginx
    args:
    - sleep
    - 1d
